06-about-us-section-styling

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
   <section class="about-us" id="about-us">
     <div class="about-us__image">
-      <div class="about-us__imagesushi3">
+      <div class="about-us__image-sushi3">
         <img src="assets/sushi-3.png" alt="sushi"/>
       </div>
 
@@ -104,7 +104,7 @@
         <img src="assets/arrow-up-right.svg" alt="learn more"/>
       </button>
 
-      <div class="about-us__imagesushi2">
+      <div class="about-us__image-sushi2">
         <img src="assets/sushi-2.png" alt="sushi"/>
       </div>
 
