--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="sushi.png" />
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
   <title>ShushiWorld</title>
 </head>
 <body>
   <header>
     <nav class="header__nav">
       <div class="header__logo">
-        <h4>Sushi World</h4>
+        <h4 data-aos="fade-down" >Sushi World</h4>
         <div class="header__logo-overlay"></div>
       </div>
 
-      <ul class="header__menu">
+      <ul class="header__menu" data-aos="fade-down">
         <li>
           <a href="#menu">Menu</a>
         </li>
@@ -33,12 +34,13 @@
         </li>
       </ul>
 
-      <ul class="header__menu-mobile">
+      <ul class="header__menu-mobile" data-aos="fade-down">
         <li>
           <img src="assets/menu.svg" alt="menu">
         </li>
       </ul>
     </nav>
+    
   </header>
 
   <section class="hero">
@@ -46,9 +48,10 @@
       <img 
       src = "assets/sushi-1.png"
       alt = "sushi"
+      data-aos="fade-up"
       />
 
-      <h2>
+      <h2 data-aos="fade-up">
         日  <br/>
         本  <br/>
         食   
@@ -58,7 +61,7 @@
     </div>
 
     <div class="hero-content">
-      <div class="hero-content-info">
+      <div class="hero-content-info" data-aos="fade-left">
         <h1>Feel the taste of Japanese food</h1>
         <p>Feel the taste of the most popular Japanese food from anywhere and anytime.</p>
 
@@ -73,7 +76,7 @@
         </div> 
       </div>
 
-      <div class="hero-content__testimonial">
+      <div class="hero-content__testimonial" data-aos="fade-up">
         <div class="hero-content__customer flex-center">
           <h4>24<span>k+</span></h4>
           <p>Happy Customers</p>
@@ -95,7 +98,7 @@
   <section class="about-us" id="about-us">
     <div class="about-us__image">
       <div class="about-us__image-sushi3">
-        <img src="assets/sushi-3.png" alt="sushi"/>
+        <img src="assets/sushi-3.png" alt="sushi" data-aos="fade-right"/>
       </div>
 
       <button class="about-us__button">
@@ -105,12 +108,12 @@
       </button>
 
       <div class="about-us__image-sushi2">
-        <img src="assets/sushi-2.png" alt="sushi"/>
+        <img src="assets/sushi-2.png" alt="sushi" data-aos="fade-right"/>
       </div>
 
     </div>
 
-    <div class="about-us__content">
+    <div class="about-us__content" data-aos="fade-left">
       <p class="sushi__subtitle">
         About Us / 私たちに関しましては
       </p>
@@ -152,7 +155,49 @@
     </div>
 
     <div class="popular-foods__catalogue">
-      <!-- javascript -->
+      <article class="popular-foods__card">
+        <img class="popular-foods__card-image" src="assets/sushi-12.png" alt="sushi-12">
+
+        <h4 class="popular-foods__card-title">Chezu Shushi</h4>
+
+        <div class="popular-foods__card-details flex-between">
+          <div class="popular-foods__card-rating">
+            <img src="assets/star.svg" alt="star">
+            <p>4.9</p>
+          </div>
+
+          <p class="popular-foods__card-price">$21.00</p>
+        </div>
+      </article>
+      <article class="popular-foods__card active-card">
+        <img class="popular-foods__card-image" src="assets/sushi-11.png" alt="sushi-11">
+
+        <h4 class="popular-foods__card-title">Original Shushi</h4>
+
+        <div class="popular-foods__card-details flex-between">
+          <div class="popular-foods__card-rating">
+            <img src="assets/star.svg" alt="star">
+            <p>5.0</p>
+          </div>
+
+          <p class="popular-foods__card-price">$19.00</p>
+        </div>
+      </article>
+      <article class="popular-foods__card">
+        <img class="popular-foods__card-image" src="assets/sushi-10.png" alt="sushi-10">
+
+        <h4 class="popular-foods__card-title">Ramen Legendo</h4>
+
+        <div class="popular-foods__card-details flex-between">
+          <div class="popular-foods__card-rating">
+            <img src="assets/star.svg" alt="star">
+            <p>4.7</p>
+          </div>
+
+          <p class="popular-foods__card-price">$13.00</p>
+        </div>
+      </article>
+
     </div>
 
     <button class="popular-foods__button">
