--- a/index.html
+++ b/index.html
@@ -128,11 +128,11 @@
   </section>
 
   <section class="popular-foods" id="menu">
-    <h2 class="popular-foods__title">
+    <h2 class="popular-foods__title" data-aos="flip-up">
       Popular Foods/ 人気 
     </h2>
 
-    <div class="popular-foods__filters sushi__hide-scrollbar">
+    <div class="popular-foods__filters sushi__hide-scrollbar" data-aos="fade-up">
       <button class="popular-foods__filter-btn active">All</button>
       <button class="popular-foods__filter-btn">
         <img src="assets/sushi-9.png" alt="sushi 9">
@@ -154,7 +154,7 @@
 
     </div>
 
-    <div class="popular-foods__catalogue">
+    <div class="popular-foods__catalogue" data-aos="fade-up">
       <article class="popular-foods__card">
         <img class="popular-foods__card-image" src="assets/sushi-12.png" alt="sushi-12">
 
