--- a/index.html
+++ b/index.html
@@ -205,6 +205,12 @@
       <img src="assets/arrow-right.svg" alt="arrow-right">
     </button>
   </section>
+
+  <section class="trending" id="food">
+    <div class="trending__content" data-aos="fade-right">
+      <p class="sushi__subtitle">Whats's Trending / トレンド </p>
+    </div>
+  </section>
   
   <script type="module" src="js/script.js"></script>
 </body>
