--- a/index.html
+++ b/index.html
@@ -209,6 +209,48 @@
   <section class="trending" id="food">
     <div class="trending__content" data-aos="fade-right">
       <p class="sushi__subtitle">Whats's Trending / トレンド </p>
+
+      <h3 class="sushi__title">Japanese Sushi</h3>
+      <p class="sushi__description">Feel the taste of the most delicious Sushi here.</p>
+
+      <ul class="trending__list flex-between">
+        <li>
+          <div class="trendin__icon flex-center">
+            <img src="assets/check.svg" alt="check">
+          </div>
+          <p>Make Sushi</p>
+        </li>
+        <li>
+          <div class="trendin__icon flex-center">
+            <img src="assets/check.svg" alt="check">
+          </div>
+          <p>Oshizushi</p>
+        </li>
+        <li>
+          <div class="trendin__icon flex-center">
+            <img src="assets/check.svg" alt="check">
+          </div>
+          <p>Uramaki Sushi</p>
+        </li>
+        <li>
+          <div class="trendin__icon flex-center">
+            <img src="assets/check.svg" alt="check">
+          </div>
+          <p>Nigiri Sushi</p>
+        </li>
+        <li>
+          <div class="trendin__icon flex-center">
+            <img src="assets/check.svg" alt="check">
+          </div>
+          <p>Temaki Sushi</p>
+        </li>
+        <li>
+          <div class="trendin__icon flex-center">
+            <img src="assets/check.svg" alt="check">
+          </div>
+          <p>Inari Sushi</p>
+        </li>
+      </ul>
     </div>
   </section>
   
