16-adding-comments-section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <title>ShushiWorld</title>
 </head>
 <body>
+  <!-- Navbar  -->
   <header>
     <nav class="header__nav">
       <div class="header__logo">
@@ -43,6 +44,7 @@
     
   </header>
 
+  <!-- Hero Section -->
   <section class="hero">
     <div class="hero-image">
       <img 
@@ -95,6 +97,7 @@
     
   </section>
 
+  <!-- About Us Section -->
   <section class="about-us" id="about-us">
     <div class="about-us__image">
       <div class="about-us__image-sushi3">
@@ -127,6 +130,7 @@
     </div>
   </section>
 
+  <!-- Popular Foods Section -->
   <section class="popular-foods" id="menu">
     <h2 class="popular-foods__title" data-aos="flip-up">
       Popular Foods/ 人気 
@@ -206,6 +210,7 @@
     </button>
   </section>
 
+  <!-- Trending Section -->
   <section class="trending" id="food">
     <section class="trending-sushi">
 
@@ -337,6 +342,7 @@
 
   </section>
 
+  <!-- Subscription Section -->
   <section class="subscription flex-center" id="services">
     <h2 data-aos="flip-down">
       Get offers stright <br/>
@@ -350,6 +356,7 @@
     </div>
   </section>
 
+  <!-- Footer Section -->
   <footer class="footer flex-between">
     <h3 class="footer__logo">
       <span>Sushi</span>World
